// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DownloadBtn > renders correctly 1`] = `
<button
  class="
    outlined-style
    text-primary
    text-wrap
    v-btn
    v-btn--density-default
    v-btn--size-default
    v-btn--variant-outlined
    v-theme--light
    vd-download-btn
  "
  style="height: auto; min-height: 36px;"
  type="button"
>
  <span class="v-btn__overlay"></span>
  <span class="v-btn__underlay"></span>
  <!---->
  <span
    class="v-btn__content"
    data-no-activator=""
  >
    <i
      aria-hidden="true"
      class="
        M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z
        mdi
        mr-3
        notranslate
        text-primary
        v-icon
        v-icon--size-default
        v-theme--light
      "
    ></i>
  </span>
  <!---->
  <!---->
</button>
`;

exports[`DownloadBtn > with slots 1`] = `
<button
  class="
    outlined-style
    text-primary
    text-wrap
    v-btn
    v-btn--density-default
    v-btn--size-default
    v-btn--variant-outlined
    v-theme--light
    vd-download-btn
  "
  style="height: auto; min-height: 36px;"
  type="button"
>
  <span class="v-btn__overlay"></span>
  <span class="v-btn__underlay"></span>
  <!---->
  <span
    class="v-btn__content"
    data-no-activator=""
  >
    <i
      aria-hidden="true"
      class="
        M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z
        mdi
        mr-3
        notranslate
        text-primary
        v-icon
        v-icon--size-default
        v-theme--light
      "
    ></i>
    Download
  </span>
  <!---->
  <!---->
</button>
`;
